--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -15,19 +15,19 @@
     <div class="timer">
       <div class="field">
         <span class="value" data-days>00</span>
-        <span class="label">Days</span>
+        <span class="label label-days">Днів</span>
       </div>
       <div class="field">
         <span class="value" data-hours>00</span>
-        <span class="label">Hours</span>
+        <span class="label label-hours">Годин</span>
       </div>
       <div class="field">
         <span class="value" data-minutes>00</span>
-        <span class="label">Minutes</span>
+        <span class="label label-minutes">Хвилин</span>
       </div>
       <div class="field">
         <span class="value" data-seconds>00</span>
-        <span class="label">Seconds</span>
+        <span class=" label label-seconds">Cекунд</span>
       </div>
     </div>
 
